test/spec_vectors/align/ok/module_10.wat
(module (memory 0) (func (drop (i64.load32_u align=4 (i32.const 0)))))