test/spec_vectors/align/fail/module_77.wat
(module (memory 0) (func (drop (i64.load16_u align=4 (i32.const 0)))))